--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'io.grpc:grpc-protobuf:1.17.1'
     compile 'io.grpc:grpc-stub:1.17.1'
     compile "io.grpc:grpc-services:1.12.0"
+    compile "org.postgresql:postgresql:42.2.5"
 
     compile group: 'org.mongodb', name: 'mongodb-driver-sync', version: '3.8.2'
 }
